# wasm2native

./: .gitignore  CMakeLists.txt  README.md  build-full.sh  build-libs.sh  build.sh  wasi-main.c
examples/: hello.wasm  wasm2c.wasm
src/: wasi-main.c  wasm-rt.h
